Task #3296: Correct spacing of the post count

--- a/_assets/styles/scss/04-components/_blog-topic.scss
+++ b/_assets/styles/scss/04-components/_blog-topic.scss
@@ -37,7 +37,9 @@
     display: block;
     font-size: .6em;
     height: 22px;
+    line-height: 20px;
     min-width: 22px;
+    padding: 0;
     position: absolute;
     right: -13px;
     text-align: center;
